--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,13 @@
         "outDir": "./dist/out-tsc",
         "sourceMap": true,
         "declaration": false,
+
         "module": "esnext",
         "moduleResolution": "node",
+
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
+
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "importHelpers": true,
