--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
         "@fullcalendar/interaction": "4.0.2",
         "@fullcalendar/timegrid": "4.0.1",
         "chart.js": "2.7.3",
+        "font-awesome": "4.7.0",
         "intl": "1.2.5",
+        "primeicons": "1.0.0",
         "primeng": "8.0.0",
         "quill": "1.1.8",
         "rxjs": "6.4.0",
+        "uuid": "^8.3.2",
         "web-animations-js": "github:angular/web-animations-js#release_pr208",
-        "zone.js": "0.9.1",
-        "primeicons": "1.0.0",
-        "font-awesome": "4.7.0"
+        "zone.js": "0.9.1"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "0.800.2",
