--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "chart.js": "2.7.3",
         "font-awesome": "4.7.0",
         "intl": "1.2.5",
+        "lodash": "^4.17.21",
         "primeicons": "1.0.0",
         "primeng": "8.0.0",
         "quill": "1.1.8",
@@ -38,12 +39,13 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "0.800.2",
-        "@angular/compiler-cli": "8.0.0",
         "@angular/cli": "8.0.0",
+        "@angular/compiler-cli": "8.0.0",
         "@angular/language-service": "8.0.0",
-        "@types/node": "8.9.5",
         "@types/jasmine": "3.3.13",
         "@types/jasminewd2": "2.0.3",
+        "@types/lodash": "^4.14.170",
+        "@types/node": "8.9.5",
         "codelyzer": "5.1.0",
         "jasmine-core": "3.4.0",
         "jasmine-spec-reporter": "4.2.1",
